Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug
Bug#: 20583
Product:  
Component:  
Status: RESOLVED
Resolution: FIXED
Assigned To: Not yet assigned to anyone <unassigned@gcc.gnu.org>
Host:
Reported against  
Priority:  
Severity:  
Target Milestone:  
 
 
Target:
Reporter: Andreas Schwab <schwab@linux-m68k.org>
Add CC:
CC:
Remove selected CCs
Build:
URL:
Summary:
Keywords:
Known to work:
Known to fail:

Attachment Description Type Created Size Actions
iso-2022-cn-ext.i Testcase text/plain 2005-03-22 01:20 623 bytes Edit
Create a New Attachment (proposed patch, testcase, etc.) View All

Bug 20583 depends on: Show dependency tree
Show dependency graph
Bug 20583 blocks:

Additional Comments:






View Bug Activity   |   Format For Printing   |   Clone This Bug


Description:   Last confirmed: 2006-02-20 18:41 Opened: 2005-03-22 01:19
This might be related to PR20447 or PR18592. 
 
$ m68k-linux-gcc -O -S iso-2022-cn-ext.i 
iso-2022-cn-ext.i: In function &#8216;gconv&#8217;: 
iso-2022-cn-ext.i:85: internal compiler error: output_operand: invalid 
expression as operand 
Please submit a full bug report, 
with preprocessed source if appropriate. 
See <URL:http://gcc.gnu.org/bugs.html> for instructions.

------- Comment #1 From Andreas Schwab 2005-03-22 01:20 -------
Created an attachment (id=8430) [edit]
Testcase

------- Comment #2 From dank@kegel.com 2005-03-23 17:06 -------
That's the same one I mentioned in
http://gcc.gnu.org/ml/gcc/2005-03/msg00991.html
I was going to report it, but you beat me to it,
and you did a better job of minimizing the test
case thank I did. Thanks!

What does it take to confirm the bug?

------- Comment #3 From dank@kegel.com 2005-04-14 05:28 -------
Still seeing this on 4.0.0-rc1.

------- Comment #4 From Serge Belyshev 2005-04-15 23:04 -------
Confirmed.

------- Comment #5 From dank@kegel.com 2005-07-06 05:11 -------
Still seeing this on gcc-4.0.1-20050702.

------- Comment #6 From Mark Mitchell 2005-08-22 02:52 -------
m68k is not a primary or secondary platform; removing target milestone.

------- Comment #7 From Kazu Hirata 2005-11-06 02:10 -------
Reduced down to:

void bar (unsigned int);

void
foo (void)
{
  char buf[1] = { 3 };
  const char *p = buf;
  const char **q = &p;
  unsigned int ch;
  switch (**q)
    {
    case 1:  ch = 5; break;
    case 2:  ch = 4; break;
    case 3:  ch = 3; break;
    case 4:  ch = 2; break;
    case 5:  ch = 1; break;
    default: ch = 0; break;
    }
  bar (ch);
}

This is one of those rare cases where CSE1 folds a switch statement.

------- Comment #8 From Kazu Hirata 2005-11-21 04:41 -------
Subject: Bug 20583

Author: kazu
Date: Mon Nov 21 04:41:38 2005
New Revision: 107278

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=107278
Log:
gcc/
        PR middle-end/20583
        * cse.c (cse_insn): Reject invalid forms of CONST earlier.

gcc/testsuite/
        PR middle-end/20583
        * gcc.c-torture/compile/pr20583.c: New.

Added:
    trunk/gcc/testsuite/gcc.c-torture/compile/pr20583.c
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/cse.c
    trunk/gcc/testsuite/ChangeLog

------- Comment #9 From Kazu Hirata 2005-11-21 06:52 -------
Subject: Bug 20583

Author: kazu
Date: Mon Nov 21 06:52:01 2005
New Revision: 107281

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=107281
Log:
gcc/
        PR middle-end/20583
        * cse.c (cse_insn): Reject invalid forms of CONST earlier.

gcc/testsuite/
        PR middle-end/20583
        * gcc.c-torture/compile/pr20583.c: New.

Added:
    branches/gcc-4_1-branch/gcc/testsuite/gcc.c-torture/pr20583.c
Modified:
    branches/gcc-4_1-branch/gcc/ChangeLog
    branches/gcc-4_1-branch/gcc/cse.c
    branches/gcc-4_1-branch/gcc/testsuite/ChangeLog

------- Comment #10 From Andrew Pinski 2005-11-21 16:50 -------
Fixed in 4.1.0 and above for now.

------- Comment #11 From Kazu Hirata 2006-05-21 09:51 -------
Unassignining myself.

------- Comment #12 From Andrew Pinski 2006-06-20 05:21 -------
*** Bug 28092 has been marked as a duplicate of this bug. ***

------- Comment #13 From Gabriel Dos Reis 2007-01-18 03:40 -------
Fixed in 4.1.0.

Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug