re PR rtl-optimization/20583 (ICE in output_operand: invalid expression as operand)

gcc/
	PR middle-end/20583
	* cse.c (cse_insn): Reject invalid forms of CONST earlier.

gcc/testsuite/
	PR middle-end/20583
	* gcc.c-torture/compile/pr20583.c: New.

From-SVN: r107281